2009-10-12  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Makefile.in, aprx.8.in, aprx.conf.in, aprx.h, config.c,
	  filter.c, interface.c, netax25.c, netbeacon.c, pbuf.c,
	  pbuf.h, ttyreader.c:
	    Incremental work on new style of configurations
	    as outlined in the Requirement Specification document.
	    Old style configurations do still work.

2009-10-05  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.06

	* netbeacon.c:
	    Complete beacon coordinate validator code, now it
	    can detect invalid input values properly.

	* netax25.c, aprsis.c, ttyreader.c, igate.c, aprx.h:
	    Cleaning gcc -Wall warnings on various platforms,
	    including OpenBSD.

2009-10-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.05

	* kiss.c, netax25.c, ttyreader.c, aprx.h, ax25.c:
	    Write the SMACK frame with correctly escaped CRC.

2009-09-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.04

	* netax25.c:
	    When writing AX.25 KISS frame to kernel, try to do it
	    up to 3 times.  Also add some debug statements on
	    ax25-rxport processing.

	* VERSION: 1.03

	* ttyreader.c:
	    Fix on serial port startup - always turn on flows on
	    the port, and explicitely flush the driver level
	    buffers discarding possibly accumulated data.

2009-09-28  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION:  1.02

	* erlang.c, aprx-stat.c, aprx.h:
	    Remove subport from erlang codes, having "tncid N" on serial
	    port definitions takes care of this kind of things.

	* kiss.c, ttyreader.c, netax25.c, ax25.h:
	    Moved KISS/SMACK encoder to separate module, the CRC16 calculator
	    went there as well.  For each ttyreader sub-tncid there is
	    separately opened KISS-pty channel on Linux systems with given
	    callsign as interface's writer channel.  The  netax25 ax25-port
	    reader does not accept packets with source callsign as any of
	    our ttyreader callsigns.

	* erlang.c: