@@ -1,4 +1,4 @@
-Copyright (c) 2007-2008, Matti Aarnio
+Copyright (c) 2007-2009, Matti Aarnio
 
 All rights reserved.
 
