@@ -1,5 +1,5 @@
 
-		APRX    v1.06
+		APRX    v1.90
 
 A receive-only APRS-IS "i-gate" with following properties:
 
